# vpn-bot

./: README.md
save-later-bot/: .env.example  .gitignore  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
save-later-bot/alembic/: env.py
save-later-bot/alembic/versions/: 001_initial.py  002_phase2.py  003_product_phase.py  004_daily_review.py
save-later-bot/app/: config.py  main.py
save-later-bot/app/bot/: formatters.py  keyboards.py  states.py
save-later-bot/app/db/: models.py
save-later-bot/app/repositories/: analytics.py  collections.py  folders.py  items.py
save-later-bot/app/services/: collections.py  daily_review.py  digest.py  embeddings.py  extractor.py  reminders.py  save_orchestrator.py  scheduler.py  search.py  subscription.py  tag_suggester.py  transcription.py  url_summary.py
save-later-bot/docs/: IMPORT_SAVED_MESSAGES.md  PRODUCT.md
save-later-bot/scripts/: import_saved_messages.py
save-later-bot/tests/: test_collections.py  test_daily_review.py  test_extractor.py  test_reminders.py  test_search.py  test_subscription.py
stars-exchange-bot/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
stars-exchange-bot/alembic/versions/: 001_initial.py
stars-exchange-bot/app/: config.py  formatters.py  main.py
stars-exchange-bot/app/bot/: keyboards.py
stars-exchange-bot/app/db/: models.py
stars-exchange-bot/app/http/: routes.py
stars-exchange-bot/app/integrations/: robokassa_client.py
stars-exchange-bot/app/repositories/: orders.py  packages.py  users.py
stars-exchange-bot/app/services/: fulfillment.py  payment.py  (+2 more)
stars-exchange-bot/scripts/: seed_packages.py  telethon_login.py
stars-exchange-bot/tests/: conftest.py  test_config.py  test_http_routes.py  test_payment.py  test_pricing.py  test_robokassa.py
vpn-sales-bot/: .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
vpn-sales-bot/app/: config.py  formatters.py  main.py
vpn-sales-bot/scripts/: seed_plans.py
vpn-sales-bot/tests/: conftest.py  test_admin_expiry_alert.py  test_admin_give_config.py  test_admin_report.py  test_admin_stats.py  test_admin_vpn_test.py  test_amnezia_export.py  test_awg_conf.py  test_config.py  test_config_broadcast.py  test_expire_revoke.py  test_fulfillment_renewal.py  test_http_routes.py  test_payment_idempotency.py  test_referral.py  test_split_tunnel_gift.py  test_ssh_provisioner.py  test_stars_buy_hint.py  test_subscription_extend.py  test_trial.py  test_trial_referral_labels.py  test_user_lookup.py  test_vpn_delivery.py
vpn-sales-bot/vpn_sales_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+79 files in other folders)
