[project]
name = "vpn-sales-bot"
version = "0.2.0"
description = "Telegram bot: sell VPN subscriptions via Telegram Stars and Amnezia"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13,<4",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",
    "alembic>=1.13,<2",
    "apscheduler>=3.10,<4",
    "pydantic-settings>=2.5,<3",
    "httpx>=0.27,<1",
    "python-dotenv>=1.0,<2",
    "aiohttp>=3.10,<4",
    "asyncssh>=2.14,<3",
    "qrcode[pil]>=7.4,<9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "aiosqlite>=0.20,<1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
app = ["data/*.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
